# ETL_vacantions_France_and_neighboors

./: .gitignore  README.md
srcs/: etl_pipeline_test.ipynb  load_vacations.py  main.py  pyproject.toml  t_vacances_etl.py  test_load_vacations_script.ipynb
srcs/Queries/: region_vacances.sql  t_region_vacances.sql  t_vacances.sql  vacation_calendar.sql
srcs/vacances_etl/: __init__.py  export_remaining_countries_csv.py  t_vacances_etl.py
